--- a/fleet-util/pom.xml
+++ b/fleet-util/pom.xml
@@ -23,6 +23,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.davidmoten</groupId>
+            <artifactId>geo</artifactId>
+            <version>0.7.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
