--- a/fleet-api/pom.xml
+++ b/fleet-api/pom.xml
@@ -17,6 +17,10 @@
 
         Health check API
 
+        Redis:
+            sudo service redis-server status
+
+
     -->
     <properties>
         <testng.version>6.9.10</testng.version>
@@ -28,6 +32,9 @@
         <logback.version>1.0.7</logback.version>
 
         <dropwizard.version>1.2.2</dropwizard.version>
+
+        <redission.version>3.7.3</redission.version>
+        <jackson-databind.version>2.9.0.pr1</jackson-databind.version>
     </properties>
 
     <dependencies>
@@ -42,12 +49,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.slf4j/jcl-over-slf4j &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>jcl-over-slf4j</artifactId>-->
-            <!--<version>1.7.22</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -81,6 +82,21 @@
             <version>0.10.1</version>
             <scope>provided</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${redission.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+        </dependency>
+
     </dependencies>
 
 
