--- a/fleet-api/configs/configuration.yml
+++ b/fleet-api/configs/configuration.yml
@@ -8,7 +8,7 @@ logging:
   appenders:
   - type: file
     threshold: info
-    logFormat: "%-5p [%d{ISO8601}] [%X{reqId} %X{txnId}] %replace(%c: %m){'\n', '\n '}%n%replace(%ex){'(?m)^(.)',' $1'}%nopex"
+    logFormat: "%-6level [%d{HH:mm:ss.SSS}] [%t] %logger{5} - %X{code} %msg %n"
     currentLogFilename: /opt/caffeine/swing/logs/fleet-api.log
     archivedLogFilenamePattern: /opt/caffeine/swing/logs/fleet-api-%d.log.gz
     archivedFileCount: 5
