--- a/fleet-api/pom.xml
+++ b/fleet-api/pom.xml
@@ -27,14 +27,13 @@
         <java.version>1.8</java.version>
         <surefire.version>2.17</surefire.version>
         <jacoco.version>0.7.2.201409121644</jacoco.version>
-
         <slf4j.version>1.7.7</slf4j.version>
         <logback.version>1.0.7</logback.version>
-
         <dropwizard.version>1.2.2</dropwizard.version>
-
         <redission.version>3.7.3</redission.version>
         <jackson-databind.version>2.9.0.pr1</jackson-databind.version>
+        <apache.http.client.versino>4.5.3</apache.http.client.versino>
+        <gson.version>2.8.0</gson.version>
     </properties>
 
     <dependencies>
@@ -97,6 +96,20 @@
             <version>${jackson-databind.version}</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache.http.client.versino}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
     </dependencies>
 
 
